@startuml MATIKA_ClassDiagram
!theme plain
skinparam classAttributeIconSize 0
hide empty members

class Organization {
  +id: PK
  +name: str
  +slug: str
}

class User {
  +id: PK
  +email: str
  +role: str
  +full_name: str
  +organization_id: FK
}

class StudentProfile {
  +user_id: FK
  +group_id: FK
  +course_year: int
  +gpa: decimal
  +schedule_preferences: JSON
}

class TeacherProfile {
  +user_id: FK
  +department_id: FK
  +preferred_days: JSON
  +preferred_periods: JSON
}

class Faculty {
  +id: PK
  +organization_id: FK
  +name: str
}

class Department {
  +id: PK
  +faculty_id: FK
  +name: str
}

class Group {
  +id: PK
  +department_id: FK
  +name: str
  +size: int
}

class Discipline {
  +id: PK
  +department_id: FK
  +name: str
  +code: str
}

class Room {
  +id: PK
  +organization_id: FK
  +name: str
  +capacity: int
}

class TimeSlot {
  +id: PK
  +organization_id: FK
  +day_of_week: int
  +period: int
  +start_time: time
  +end_time: time
}

class AcademicPeriod {
  +id: PK
  +organization_id: FK
  +name: str
  +slug: str
  +start_date, end_date: date
  +is_current: bool
}

class TeachingRequirement {
  +id: PK
  +group_id: FK
  +discipline_id: FK
  +teacher_id: FK
  +sessions_per_week: int
  +min_room_capacity: int
}

class Lesson {
  +id: PK
  +academic_period_id: FK
  +group_id: FK
  +discipline_id: FK
  +teacher_id: FK
  +room_id: FK
  +timeslot_id: FK
  +color: str
  +is_frozen: bool
  +is_draft: bool
}

class Notification {
  +id: PK
  +user_id: FK
  +kind: str
  +payload: JSON
  +is_read: bool
}

class SlotPedagogicalFeatures {
  +id: PK
  +organization_id: FK
  +timeslot_id: FK
  +student_fatigue_index: float
  +survey_burden_index: float
  +lms_activity_normalized: float
  +historical_semester_load: float
  +target_unfitness_label: float (null allowed)
}

class AlgorithmRunLog {
  +id: PK
  +organization_id: FK
  +kind: str
  +ok: bool
  +message: str
  +details: JSON
}

class TeacherPreferenceRequest {
  +id: PK
  +user_id: FK
  +status: str
  +proposed_preferred_days: JSON
}

Organization "1" *-- "many" Faculty
Organization "1" *-- "many" Room
Organization "1" *-- "many" TimeSlot
Organization "1" *-- "many" AcademicPeriod
Organization "1" o-- "many" User

Faculty "1" *-- "many" Department
Department "1" *-- "many" Group
Department "1" *-- "many" Discipline

User ||--o| StudentProfile
User ||--o| TeacherProfile
TeacherProfile }o--|| Department
StudentProfile }o--|| Group

Group "1" *-- "many" TeachingRequirement
Discipline "1" *-- "many" TeachingRequirement
TeacherProfile "1" *-- "many" TeachingRequirement

AcademicPeriod "1" *-- "many" Lesson
Group "1" *-- "many" Lesson
Discipline "1" *-- "many" Lesson
TeacherProfile "1" *-- "many" Lesson
Room "1" *-- "many" Lesson
TimeSlot "1" *-- "many" Lesson

TimeSlot "1" *-- "0..1" SlotPedagogicalFeatures
User "1" *-- "many" Notification
User "1" *-- "many" TeacherPreferenceRequest

@enduml
